Accesibilty Resport imporvments
Former-commit-id: f708b2e81c14d17df9d5c96f66a5a16fd8ebfba9

--- a/portal/src/main/resources/ApplicationResources-Accesibilidad.properties
+++ b/portal/src/main/resources/ApplicationResources-Accesibilidad.properties
@@ -1226,8 +1226,8 @@ minhap.observatory.5_0.subgroup.2.5  = 2.5 Independencia del dispositivo
 minhap.observatory.5_0.subgroup.2.6  = 2.6 Navegaci\u00F3n consistente
 minhap.observatory.5_0.subgroup.3.1  = 1 Presencia de la declaraci\u00F3n de accesibilidad
 minhap.observatory.5_0.subgroup.3.2  = 2 Situaci\u00F3n de cumplimiento y contenido no accesible
-minhap.observatory.5_0.subgroup.3.3  = 3 Comunicaciones sobre requisitos de accesibilidad
-minhap.observatory.5_0.subgroup.3.4  = 4 Preparaci\u00F3n de la declaraci\u00F3n de accesibilidad
+minhap.observatory.5_0.subgroup.3.3  = 3 Preparaci\u00F3n de la declaraci\u00F3n de accesibilidad
+minhap.observatory.5_0.subgroup.3.4  = 4 Comunicaciones sobre requisitos de accesibilidad
 minhap.observatory.5_0.subgroup.3.5  = 5 Procedimiento de aplicaci\u00F3n
 
 ministerio.logo.alt = MINHAFP - Ministerio de Pol\u00EDtica Territorial y Funci\u00F3n P\u00FAblica
@@ -1401,12 +1401,12 @@ nueva.semilla.ip.puertos                   = Puertos:
 nueva.semilla.ip.title                     = Rango de IP
 nueva.semilla.observatorio.acronimo        = Acr\u00F3nimo
 nueva.semilla.observatorio.activa          = Activa
-nueva.semilla.observatorio.eliminada        = Eliminada
+nueva.semilla.observatorio.ambito          = Ambito
 nueva.semilla.observatorio.categoria       = Segmento
-nueva.semilla.observatorio.directorio = Directorio
 nueva.semilla.observatorio.complejidad     = Complejidad
 nueva.semilla.observatorio.dependencia     = Depende de
-nueva.semilla.observatorio.ambito   = Ambito
+nueva.semilla.observatorio.directorio      = Directorio
+nueva.semilla.observatorio.eliminada       = Eliminada
 nueva.semilla.observatorio.etiqueta        = Etiqueta
 nueva.semilla.observatorio.in.directory    = Seguir solo enlaces del directorio:
 nueva.semilla.observatorio.nombre          = Nombre Semilla
@@ -2375,7 +2375,7 @@ ob.resAnon.intav.report.verification.level1.title                            = E
 
 observatorio.desglose.resultados                                = Desglose de resultados del an\u00E1lisis
 observatorio.duplicada                                          = Observatorio ya existente.
-observatorio.nivel.adecuacion                                   = Nivel de adecuaci\u00F3n estimado
+observatorio.nivel.adecuacion                                   = Nivel de Cumplimiento Estimado
 observatorio.nivel.analisis.1                                   = A
 observatorio.nivel.analisis.2                                   = AA
 observatorio.nivel.cumplimiento                                 = Situaci\u00F3n de cumplimiento estimado
@@ -2553,10 +2553,10 @@ pdf.accessibility.global.evolution.warningA.title       = Evoluci\u00F3n: Media 
 pdf.accessibility.global.evolution.warningAA.title      = Evoluci\u00F3n: Media de Advertencias. AA.
 pdf.accessibility.global.priority.incidence             = Incidencias Por Prioridad Global
 pdf.accessibility.global.summary.info                   = Los niveles de adecuaci\u00F3n de verificaci\u00F3n, p\u00E1gina y sitio web, as\u00ED como la situaci\u00F3n de cumplimiento del sitio web, son una estimaci\u00F3n en base a unas verificaciones autom\u00E1ticas. Es SIEMPRE necesaria una revisi\u00F3n manual experta complementando todos los requisitos de UNE-EN 301 549:2019 para determinar el nivel de adecuaci\u00F3n REAL del sitio web.
-pdf.accessibility.global.summary.p1                     = En este apartado se muestran los resultados globales del sitio web calculados de acuerdo a la metodolog\u00EDa actual del Observatorio de Accesibilidad Web, as\u00ED como una comparaci\u00F3n con la iteraci\u00F3n anterior, en el caso de existir. Los resultados calculados son los siguientes:
-pdf.accessibility.global.summary.p2                     = La {0} refleja la cantidad de verificaciones de accesibilidad que se satisfacen correctamente ya sean de nivel de adecuaci\u00F3n A o AA. Por lo tanto, cuanta m\u00E1s alta sea la puntuaci\u00F3n m\u00E1s verificaciones de accesibilidad se est\u00E1n cumpliendo.
+pdf.accessibility.global.summary.p1                     = En este apartado se muestran los resultados globales del sitio web calculados de acuerdo a la metodolog\u00EDa actual del Observatorio de Accesibilidad Web. Los resultados calculados son los siguientes:
+pdf.accessibility.global.summary.p2                     = La {0} refleja la cantidad de verificaciones de accesibilidad que se satisfacen correctamente. Por lo tanto, cuanta m\u00E1s alta sea la puntuaci\u00F3n m\u00E1s verificaciones de accesibilidad se est\u00E1n cumpliendo.
 pdf.accessibility.global.summary.p2.bold                = puntuaci\u00F3n media del sitio web
-pdf.accessibility.global.summary.p3                     = El {0} del sitio web (No v\u00E1lido, A o AA) est\u00E1 relacionado con el nivel de adecuaci\u00F3n de las verificaciones que se satisfacen. Si los fallos se concentran en verificaciones de nivel de adecuaci\u00F3n A, el nivel de adecuaci\u00F3n estimado ser\u00E1 No v\u00E1lido aunque la puntuaci\u00F3n media del sitio web sea alta. 
+pdf.accessibility.global.summary.p3                     = El nivel de cumplimiento estimado del sitio web (Sin declaraci\u00F3n, No v\u00E1lido, Parcial y Completa) est\u00E1 relacionado con el nivel de cumplimiento de las verificaciones que se satisfacen.
 pdf.accessibility.global.summary.p3.bold                = nivel de adecuaci\u00F3n estimado
 pdf.accessibility.global.summary.p4                     = La {0} del sitio web (No conforme, Parcialmente conforme o Totalmente conforme) est\u00E1 relacionada con la conformidad (No aplica, Conforme o No conforme) de cada una de las verificaciones a nivel de sitio web.
 pdf.accessibility.global.summary.p4.bold                = situaci\u00F3n de cumplimiento estimada
@@ -2581,7 +2581,7 @@ pdf.accessibility.intro.how.p8                          = A continuaci\u00F3n se
 pdf.accessibility.intro.how.p8.anchor1.text             = comunidad de accesibilidad
 pdf.accessibility.intro.how.p8.anchor1.url              = http://administracionelectronica.gob.es/comunidades/accesibilidad
 pdf.accessibility.intro.how.title                       = C\u00F3mo utilizar el informe 
-pdf.accessibility.intro.info                            = Este documento NO constituye el \u201CInforme de revisi\u00F3n de la accesibilidad\u201D que se deber\u00E1 realizar siguiendo los requisitos del art\u00EDculo 17 del RD 1112/2018 para las revisiones de accesibilidad.
+pdf.accessibility.intro.info                            = Este documento muestra \u00FAnicamente el resultado de aplicar verificaciones autom\u00E1ticas a la comprobaci\u00F3n de la declaraci\u00F3n de accesibilidad y no exime de realizar las verificaciones manuales que se estimen oportunas para cumplir con lo recogido en el art\u00EDculo 15 del RD 1112/2018.
 pdf.accessibility.intro.next.list.1                     = indicados en este informe, en el apartado Incidencias de cada p\u00E1gina. Debido a que el tama\u00F1o de este documento podr\u00EDa crecer mucho, el apartado incidencias no recoge el detalle de los errores de accesibilidad, sino que solamente recoge un resumen de los mismos. Para conocer el detalle de dichos errores, deber\u00E1 ayudarse del servicio de diagn\u00F3stico en l\u00EDnea del Observatorio, al que se accede a trav\u00E9s de la [anchor1]. Se podr\u00E1n solicitar tantos informes de accesibilidad web como se necesiten y para todas las p\u00E1ginas que se deseen analizar del sitio web.
 pdf.accessibility.intro.next.list.1.anchor1.text        = comunidad de accesibilidad
 pdf.accessibility.intro.next.list.1.anchor1.url         = http://administracionelectronica.gob.es/comunidades/accesibilidad
@@ -2606,17 +2606,17 @@ pdf.accessibility.intro.next.list.4.anchor1.text        = Gu\u00EDa de validaci\
 pdf.accessibility.intro.next.list.4.anchor1.url         = https://eur-lex.europa.eu/legal-content/ES/TXT/?uri=uriserv:OJ.L_.2018.256.01.0108.01.SPA&toc=OJ:L:2018:256:FULL
 pdf.accessibility.intro.next.p1                         = Con el objetivo de ayudar al destinatario de este informe, a continuaci\u00F3n se indican los pasos a realizar tras recibir el informe:
 pdf.accessibility.intro.next.title                      = Pasos a seguir tras recibir el informe
-pdf.accessibility.intro.p1                              = El 20 de septiembre de 2018 entraron en vigor la mayor\u00EDa de las provisiones del nuevo [anchor1] que\u00A0 traspone al ordenamiento jur\u00EDdico espa\u00F1ol el [anchor2].\n
+pdf.accessibility.intro.p1                              = La declaraci\u00F3n de accesibilidad es el apartado de un sitio web donde se indica el nivel de accesibilidad del mismo e informaci\u00F3n adicional al respecto. Las entidades responsables de los sitios web y aplicaciones para m\u00F3viles deber\u00E1n proporcionar una declaraci\u00F3n de accesibilidad detallada, exhaustiva y clara sobre la conformidad de sus respectivos sitios web y aplicaciones para dispositivos m\u00F3viles con lo dispuesto en el [anchor1] que traspone al ordenamiento jur\u00EDdico espa\u00F1ol la [anchor2]. Esta declaraci\u00F3n de accesibilidad se deber\u00E1 realizar conforme al modelo europeo fijado a trav\u00E9s de la Decisi\u00F3n 2018/15233 respetando todos los condicionantes en \u00E9l establecidos.
 pdf.accessibility.intro.p1.anchor1.text                 = Real Decreto 1112/2018, de 7 de septiembre, sobre accesibilidad de los sitios web y aplicaciones para dispositivos m\u00F3viles del sector p\u00FAblico
 pdf.accessibility.intro.p1.anchor1.url                  = https://www.boe.es/buscar/act.php?id=BOE-A-2018-12699
 pdf.accessibility.intro.p1.anchor2.text                 = Directiva (UE) 2016/2102 del Parlamento Europeo y del Consejo, de 26 de octubre de 2016, sobre la accesibilidad de los sitios web y aplicaciones para dispositivos m\u00F3viles de los organismos del sector p\u00FAblico
 pdf.accessibility.intro.p1.anchor2.url                  = https://eur-lex.europa.eu/legal-content/ES/TXT/?uri=uriserv:OJ.L_.2016.327.01.0001.01.SPA&toc=OJ:L:2016:327:FULL
-pdf.accessibility.intro.p2                              = Entre las nuevas medidas puestas en marcha destaca la necesidad de establecimiento de una pol\u00EDtica de monitorizaci\u00F3n y reporte del estado de cumplimiento que se desarrolla en virtud del cap\u00EDtulo III sobre control, revisi\u00F3n, seguimiento y presentaci\u00F3n de informes del citado Real Decreto. En concreto ser\u00E1 el Ministerio de Pol\u00EDtica Territorial y Funci\u00F3n P\u00FAblica, a trav\u00E9s de la Secretar\u00EDa General de Administraci\u00F3n Digital, en el marco del [anchor1], el encargado de coordinar y llevar a cabo estas acciones.
-pdf.accessibility.intro.p2.anchor1.text                 = Observatorio de Accesibilidad Web
-pdf.accessibility.intro.p2.anchor1.url                  = https://administracionelectronica.gob.es/pae_Home/pae_Estrategias/pae_Accesibilidad/pae_Observatorio_de_Accesibilidad.html
-pdf.accessibility.intro.p3                              = La Comisi\u00F3n Europea ha establecido en la [anchor1], dos m\u00E9todos de revisi\u00F3n que deber\u00E1n aplicar los estados miembros, el m\u00E9todo simplificado y el m\u00E9todo en profundidad.\n
-pdf.accessibility.intro.p3.anchor1.text                 = Decisi\u00F3n de Ejecuci\u00F3n (UE) 2018/1524
-pdf.accessibility.intro.p3.anchor1.url                  = https://eur-lex.europa.eu/legal-content/ES/TXT/?uri=uriserv:OJ.L_.2018.256.01.0108.01.SPA&toc=OJ:L:2018:256:FULL
+pdf.accessibility.intro.p2                              = Por esta raz\u00F3n, el {0} ha elaborado un nuevo informe basado en la [anchor1], el cual comprueba \u00FAnicamente la presencia y adecuaci\u00F3n de la declaraci\u00F3n de accesibilidad del sitio web.
+pdf.accessibility.intro.p2.anchor1.text                 = metodolog\u00EDa de la Declaraci\u00F3n de Accesibilidad
+pdf.accessibility.intro.p2.anchor1.url                  = http://administracionelectronica.gob.es/PAe/accesibilidad/metodologia_declaracion
+pdf.accessibility.intro.p2.bold1                        = Observatorio de Accesibilidad Web
+pdf.accessibility.intro.p3                              = El informe {0} basado en dicha metodolog\u00EDa
+pdf.accessibility.intro.p3.bold1                        = ofrece una estimaci\u00F3n de la situaci\u00F3n en la que se encuentra la declaraci\u00F3n de accesibilidad en ese portal
 pdf.accessibility.intro.p4                              = En este documento, recibe la revisi\u00F3n realizada por el Observatorio de Accesibilidad Web en el marco del seguimiento simplificado {0}
 pdf.accessibility.intro.p4.bold                         = que permite realizar una estimaci\u00F3n del grado de cumplimiento en materia de accesibilidad de su sitio web. 
 pdf.accessibility.intro.title                           = Introducci\u00F3n
@@ -2640,7 +2640,7 @@ pdf.accessibility.seed.detail.tabla.tematica            = Tem\u00E1tica
 pdf.accessibility.seed.detail.tabla.titulo              = Detalles del sitio web
 pdf.accessibility.seed.detail.title                     = Detalles del sitio web analizado
 pdf.accessibility.subtitle                              = SEGUIMIENTO SIMPLIFICADO\nUNE-EN 301549:2019
-pdf.accessibility.title                                 = INFORME DE\nACCESIBILIDAD WEB
+pdf.accessibility.title                                 = INFORME DE\nACCESIBILIDAD WEB\nCOMPROBACI\u00D3N DECLARACI\u00D3N DE ACCESIBILIDAD (BETA)
 pdf.accessibility.warning                               = Advertencia
 pdf.accessibility.warnings                              = Advertencias
 pdf.error.no.results                                    = No se ha podido generar el informe PDF. El rastreo no tiene resultados asociados.
@@ -2842,6 +2842,7 @@ resultados.observatorio.vista.primaria.valor.noPuntua            = No punt\u00FA
 resultados.observatorio.vista.primaria.valor.noResultado         = No hay resultados
 resultados.observatorio.vista.primaria.valor.uno                 = 1
 resultados.observatorio.vista.primaria.verificacion              = Verificaci\u00F3n
+resultados.pagina.puntuacion                                     = Puntuaci\u00F3n
 resultados.primarios.4.p1                                        = En el siguiente resumen global, se muestran los datos m\u00E1s generales obtenidos en la ejecuci\u00F3n del Observatorio sobre el portal:
 resultados.primarios.4.p2                                        = La {0} refleja la cantidad de requisitos de accesibilidad que se satisfacen correctamente ya sean de A o de AA. Por lo tanto, cuanto m\u00E1s alta sea la puntuaci\u00F3n m\u00E1s requisitos de accesibilidad se est\u00E1n cumpliendo.
 resultados.primarios.4.p2.bold1                                  = puntuaci\u00F3n media del portal
