--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -1886,7 +1886,7 @@ ob.resAnon.intav.report.341.p1                                               = L
 ob.resAnon.intav.report.341.p1.bold                                          = Puntuaci\u00F3n Media de P\u00E1gina
 ob.resAnon.intav.report.341.p1.bold.html                                     = Puntuaci\u00F3n Media de P\u00E1gina
 ob.resAnon.intav.report.341.p1.html                                          = La {0} se obtiene sumando la puntuaci\u00F3n obtenida en las 20 verificaciones de la metodolog\u00EDa y dividiendo este resultado entre el n\u00FAmero de verificaciones puntuables en la p\u00E1gina, con lo que se obtendr\u00E1 un valor entre 0 y 1 que finalmente se multiplicar\u00E1 por 10.
-ob.resAnon.intav.report.341.p10                                              = {0} Puntuaci\u00F3n Media del Portal.
+ob.resAnon.intav.report.341.p10                                              = {0} Puntuaci\u00F3n Media del Sitio web.
 ob.resAnon.intav.report.341.p11                                              = SPMP: 
 ob.resAnon.intav.report.341.p12                                              = {0} Suma de Puntuaciones Medias de P\u00E1ginas.
 ob.resAnon.intav.report.341.p13                                              = NP: 
@@ -2505,7 +2505,7 @@ paginas.google = El rango de p\u00E1ginas ha sido superado.
 pass.Incorrecto = Password incorrecto.
 pass.distintos  = El password y su confirmaci\u00F3n son distintos.
 
-pdf.accessibility.anexo1                                       = Anexo I Metodolog\u00EDa del observatorio
+pdf.accessibility.anexo1                                       = Anexo I: Metodolog\u00EDa del observatorio
 pdf.accessibility.anexo1.p1                                    = Se puede consultar la metodolog\u00EDa del observatorio en [anchor1]
 pdf.accessibility.anexo1.p1.anchor.text                        = http://administracionelectronica.gob.es/PAe/accesibilidad/metodologiaSimplificado
 pdf.accessibility.anexo1.p1.anchor.url                         = http://administracionelectronica.gob.es/PAe/accesibilidad/metodologiaSimplificado
@@ -2576,7 +2576,7 @@ pdf.accessibility.infos                                        = Observaciones
 pdf.accessibility.intro.how.p1                                 = En primer lugar es necesario comentar, que junto con este informe de accesibilidad web, tambi\u00E9n se recibe un archivo {0}, que contiene el c\u00F3digo en base al cual se ha realizado la evaluaci\u00F3n de accesibilidad y se han detectado los errores. El archivo contiene una carpeta por cada p\u00E1gina analizada, y dentro de la cual se almacena el c\u00F3digo html, el archivo css y las referencias de la p\u00E1gina en cuesti\u00F3n. 
 pdf.accessibility.intro.how.p1.bold                            = c\u00F3digo_fuente.zip
 pdf.accessibility.intro.how.p2                                 = A continuaci\u00F3n, se detalla c\u00F3mo est\u00E1 organizado el informe actual.
-pdf.accessibility.intro.how.p3                                 = En primer lugar, el apartado [anchor1] muestra a t\u00EDtulo informativo los datos con los que el Observatorio ha categorizado al sitio web analizado, en cuanto a complejidad, tem\u00E1tica, distribuci\u00F3n geogr\u00E1fica, recurrencia en el an\u00E1lisis de la semilla (fija, a analizar en a\u00F1os pares o analizar en a\u00F1os impares), as\u00ED como si el sitio web ha sido destacado desde el colectivo de las asociaciones de personas con discapacidad.
+pdf.accessibility.intro.how.p3                                 = En primer lugar, el apartado [anchor1] muestra a t\u00EDtulo informativo los datos con los que el Observatorio ha categorizado al sitio web analizado, en cuanto a complejidad, tem\u00E1tica, distribuci\u00F3n geogr\u00E1fica, recurrencia en el an\u00E1lisis de la semilla (fija, a analizar en a\u00F1os pares o a analizar en a\u00F1os impares), as\u00ED como si el sitio web ha sido destacado desde el colectivo de las asociaciones de personas con discapacidad.
 pdf.accessibility.intro.how.p3.anchor1.text                    = 2. Detalles del sitio web analizado
 pdf.accessibility.intro.how.p3.anchor1.url                     = anchor_detalle_sitio_web
 pdf.accessibility.intro.how.p3.basic.service                   = En primer lugar, en funci\u00F3n del tipo de an\u00E1lisis solicitado, el "apartado 2" ser\u00E1 "2. C\u00F3digo fuente analizado" o "2. Muestra de p\u00E1ginas".
@@ -2595,9 +2595,11 @@ pdf.accessibility.intro.how.p6.anchor1.url                     = anchor_resultad
 pdf.accessibility.intro.how.p6.basic.service                   = El apartado \u201C3 Resumen de resultados\u201D {0}. Recoge un resumen de los resultados del informe, indicando la puntuaci\u00F3n del sitio web, el nivel de adecuaci\u00F3n estimado as\u00ED como la situaci\u00F3n de cumplimiento estimada. Tambi\u00E9n se aporta la Puntuaci\u00F3n media de cada p\u00E1gina analizada as\u00ED como la Puntuaci\u00F3n media de cada verificaci\u00F3n a nivel de sitio web. Este apartado recoge informaci\u00F3n agregada, ya sea a nivel de sitio web, a nivel de p\u00E1gina (indicando la puntuaci\u00F3n media de la p\u00E1gina agregando el conjunto de verificaciones) o a nivel de verificaci\u00F3n (indicando la puntuaci\u00F3n media de la verificaci\u00F3n agregando la informaci\u00F3n de todas las p\u00E1ginas). 
 pdf.accessibility.intro.how.p6.basic.service.bold1             = es el apartado clave a leer y procesar en primera instancia dado que aporta la vista general de situaci\u00F3n del sitio web
 pdf.accessibility.intro.how.p6.bold1                           = es clave para profundizar en el conocimiento de la situaci\u00F3n de accesibilidad del sitio web. Se debe consultar siempre, antes de proseguir con la lectura del informe
-pdf.accessibility.intro.how.p7                                 = En funci\u00F3n de las conclusiones anteriores, se pueden consultar para cada una de las p\u00E1ginas que m\u00E1s nos interesen los apartados "Resultados: P\u00E1gina X".El apartado \u201CIncidencias\u201D, que aparece solo cuanto hay fallos de accesibilidad e indica la comprobaci\u00F3n que est\u00E1 fallando, si bien para conocer en detalle el c\u00F3digo que est\u00E1 fallando hay que solicitar un informe al servicio de diagn\u00F3stico en l\u00EDnea del observatorio, al cual se accede desde la [anchor1], en la pesta\u00F1a Servicio.
-pdf.accessibility.intro.how.p7.anchor1.text                    = comunidad de accesibilidad
-pdf.accessibility.intro.how.p7.anchor1.url                     = http://administracionelectronica.gob.es/comunidades/accesibilidad
+pdf.accessibility.intro.how.p7                                 = En funci\u00F3n de las conclusiones anteriores, se pueden consultar para cada una de las p\u00E1ginas que m\u00E1s nos interesen los apartados [anchor1]. El apartado \u201CIncidencias\u201D, que aparece solo cuanto hay fallos de accesibilidad e indica la comprobaci\u00F3n que est\u00E1 fallando, si bien para conocer en detalle el c\u00F3digo que est\u00E1 fallando hay que solicitar un informe al servicio de diagn\u00F3stico en l\u00EDnea del observatorio, al cual se accede desde la [anchor2], en la pesta\u00F1a Servicio.
+pdf.accessibility.intro.how.p7.anchor1.text                    = Resultados: P\u00E1gina X
+pdf.accessibility.intro.how.p7.anchor1.url                     = anchor_resultados_page_1
+pdf.accessibility.intro.how.p7.anchor2.text                    = comunidad de accesibilidad
+pdf.accessibility.intro.how.p7.anchor2.url                     = http://administracionelectronica.gob.es/comunidades/accesibilidad
 pdf.accessibility.intro.how.p7.basic.service                   = El apartado \u201C4 Resultados por verificaci\u00F3n\u201D {0}. Ese apartado presenta en modo tabla el valor y la modalidad para cada una de las verificaciones y para cada una de las p\u00E1ginas analizadas. Adem\u00E1s, en la \u00FAltima fila de la tabla se recoge la conformidad estimada de cada una de las verificaciones a nivel de sitio web. Estas tablas aportan mucha informaci\u00F3n, pues permiten obtener una visi\u00F3n r\u00E1pida de qu\u00E9 verificaciones est\u00E1n fallando y en qu\u00E9 p\u00E1ginas. A partir de esta informaci\u00F3n, ser\u00E1 m\u00E1s sencillo tomar decisiones sobre qu\u00E9 errores corregir antes o qu\u00E9 p\u00E1ginas (o tipo de p\u00E1ginas) concentran los problemas.
 pdf.accessibility.intro.how.p7.basic.service.bold1             = es clave para profundizar en el conocimiento de la situaci\u00F3n de accesibilidad del sitio web. Se debe consultar siempre, antes de proseguir con la lectura del informe
 pdf.accessibility.intro.how.p8                                 = En funci\u00F3n de las conclusiones anteriores, se pueden consultar para cada una de las p\u00E1ginas que m\u00E1s nos interesen los apartados "Resultados: P\u00E1gina X ", que muestra informaci\u00F3n descriptiva de los resultados de cada p\u00E1gina, indicando el valor y la modalidad para cada una de las verificaciones. El apartado \u201CIncidencias\u201D aparece solo cuanto hay fallos de accesibilidad e indica la comprobaci\u00F3n que est\u00E1 fallando y puede incluir la localizaci\u00F3n exacta de l\u00EDnea de c\u00F3digo fuente donde se produce el error, una posible explicaci\u00F3n del error y una posible sugerencia de resoluci\u00F3n. Esto depender\u00E1 de la complejidad concreta del error.
@@ -2605,7 +2607,7 @@ pdf.accessibility.intro.how.p8.anchor1.text                    = comunidad de ac
 pdf.accessibility.intro.how.p8.anchor1.url                     = http://administracionelectronica.gob.es/comunidades/accesibilidad
 pdf.accessibility.intro.how.title                              = C\u00F3mo utilizar el informe 
 pdf.accessibility.intro.info                                   = Este documento NO constituye el \u201CInforme de revisi\u00F3n de la accesibilidad\u201D que se deber\u00E1 realizar siguiendo los requisitos del art\u00EDculo 17 del RD 1112/2018 para las revisiones de accesibilidad.
-pdf.accessibility.intro.next.basic.service.list.1              = [anchor1].
+pdf.accessibility.intro.next.basic.service.list.1              = {0} indicados en este informe, en el apartado 'Incidencias' de cada p\u00E1gina {1} [anchor1].
 pdf.accessibility.intro.next.basic.service.list.1.anchor1.text = comunidad de accesibilidad
 pdf.accessibility.intro.next.basic.service.list.1.anchor1.url  = http://administracionelectronica.gob.es/comunidades/accesibilidad
 pdf.accessibility.intro.next.basic.service.list.1.bold1        = Corregir los errores de accesibilidad 
@@ -2700,6 +2702,7 @@ pdf.accessibility.seed.detail.tabla.tematica                   = Tem\u00E1tica
 pdf.accessibility.seed.detail.tabla.titulo                     = Detalles del sitio web
 pdf.accessibility.seed.detail.title                            = Detalles del sitio web analizado
 pdf.accessibility.subtitle                                     = SEGUIMIENTO SIMPLIFICADO\nUNE-EN 301549:2019
+pdf.accessibility.summary.info                                 = Los datos reflejados son ESTIMATIVOS. Para conocer la situaci\u00F3n REAL es SIEMPRE necesaria una revisi\u00F3n manual experta complementando todos los requisitos de UNE-EN 301 549:2019.
 pdf.accessibility.title                                        = INFORME DE\nACCESIBILIDAD WEB
 pdf.accessibility.title.basic.service                          = INFORME DE\nACCESIBILIDAD WEB\nSEGUIMIENTO SIMPLIFICADO
 pdf.accessibility.warning                                      = Advertencia
@@ -2710,7 +2713,7 @@ pdf.resultpage.media                                           = Puntuaci\u00F3n
 
 priority1.bs = Incidencias.Nivel de adecuaci\u00F3n A
 
-priority2.bs = Incidencias.Nivel de adecuaci\u00F3n A
+priority2.bs = Incidencias.Nivel de adecuaci\u00F3n AA
 
 problem.codice = C\u00F3digo Fuente:
 problem.column = Columna
@@ -2923,7 +2926,7 @@ resultados.primarios.porc.paginas                                = Porcentaje de
 resultados.primarios.puntuacion.pagina                           = Resumen Comparativo del An\u00E1lisis de P\u00E1ginas.
 resultados.primarios.puntuaciones.verificacion1                  = Puntuaciones Medias por Verificaci\u00F3n. A.
 resultados.primarios.puntuaciones.verificacion2                  = Puntuaciones Medias por Verificaci\u00F3n. AA.
-resultados.primarios.res.verificacion                            = Resultados por verificaci\u00F3n y p\u00E1gina.
+resultados.primarios.res.verificacion                            = Resultados por verificaci\u00F3n y p\u00E1gina
 resultados.primarios.res.verificacion.p1                         = En este apartado se presenta en modo tabla el {0} y la {1} de cada una de las verificaciones recogidas en la metodolog\u00EDa del observatorio y para cada una de las p\u00E1ginas analizadas. 
 resultados.primarios.res.verificacion.p1.bold1                   = Valor
 resultados.primarios.res.verificacion.p1.bold2                   = Modalidad
@@ -2932,10 +2935,10 @@ resultados.primarios.res.verificacion.p2.bold                    = Conformidad
 resultados.primarios.res.verificacion.p3                         = Por lo tanto de forma r\u00E1pida y visual se puede ver en qu\u00E9 p\u00E1ginas hay que {0} para mejorar los resultados del observatorio (aquellas con {1}). 
 resultados.primarios.res.verificacion.p3.bold1                   = concentrar esfuerzos
 resultados.primarios.res.verificacion.p3.bold2                   = modalidad Falla o puntuaci\u00F3n cero
-resultados.primarios.res.verificacion.p4                         = Una p\u00E1gina tendr\u00E1 {0} cuando tenga alg\u00FAn problema menor de accesibilidad. Esto quiere decir que hay alg\u00FAn aspecto que corregir pero no es tan grave como para asignarle modalidad "Falla". Para mejorar la accesibilidad los primeros esfuerzos se deben dedicar a solucionar los problemas que originan modalidad "Falla"
+resultados.primarios.res.verificacion.p4                         = Una p\u00E1gina tendr\u00E1 {0} cuando tenga alg\u00FAn problema menor de accesibilidad. Esto quiere decir que hay alg\u00FAn aspecto que corregir pero no es tan grave como para asignarle modalidad "Falla". Para mejorar la accesibilidad los primeros esfuerzos se deben dedicar a solucionar los problemas que originan modalidad "Falla".
 resultados.primarios.res.verificacion.p4.bold                    = Valor "0" y Modalidad "Pasa"
 resultados.primarios.res.verificacion.tabla.sitioweb             = Sitio web
-resultados.primarios.res.verificacion.tabla.title                = Tabla resumen de resultados por verificaci\u00F3n y p\u00E1gina. Nivel 
+resultados.primarios.res.verificacion.tabla.title                = Tabla de resultados por verificaci\u00F3n y p\u00E1gina. Nivel 
 
 salir.sesion.sistema.alt = CERRAR
 
