--- a/portal/profiles/desarrollo/pdf.properties
+++ b/portal/profiles/desarrollo/pdf.properties
@@ -33,7 +33,7 @@ path.inteco.logoH = ${deploy.path}/images/logo_inteco.png
 path.observatorio.logo = ${deploy.path}/images/observatorio_accesibilidad_logo.png
 path.observatorio.multilanguage.logo = ${deploy.path}/images/observatorio_multi_logo.png
 #path.ministerio.logo = ${deploy.path}/images/mhfp.gif
-path.ministerio.logo = ${deploy.path}/images/logo-mptfp.png
+path.ministerio.logo = ${deploy.path}/images/logo-vice-maetd.png
 path.images = ${deploy.path}/images/
 path.problem =  ${deploy.path}/images/problema.gif
 path.warnings =  ${deploy.path}/images/advertencia.gif
